src/assets/styles/main.scss
$primary-color: #49adff;

.primary-btn {
  background-color: #49adff;
  color: #fff;
  border: none;
  padding: 0px 32px;
  height: 42px;
  border-radius: 8px;
  font-weight: 500;
  &:hover {
    background: #49adff;
    color: #fff;
    transition: 0.5s ease-in-out;
  }
}
.primary-btn-outlined {
  @extend .primary-btn;
  background-color: transparent;
  color: $primary-color;
  border: 1px solid $primary-color;
}

.main {
  --bs-gutter-x: 1.5rem;
  --bs-gutter-y: 0;
  display: flex;
  flex-wrap: wrap;
  margin-top: calc(-1 * var(--bs-gutter-y));
  height: 100%;
  .sidebar {
    // display: flex;
    // flex-direction: column;
    // align-items: flex-start;
    // min-height: 100vh;
    // padding: 20px;
    // position: fixed;
    // top: 0;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    // overflow-y: auto;
    background-color: #1a1a1a;
    width: 240px;
    padding-bottom: 70px;
    .logo {
      color: #49adff;
      font-weight: 700;
      margin-bottom: 1.5rem;
      padding: 20px;
    }
    .nav-item {
      margin-bottom: 5px;
      padding: 3px 20px 10px 20px;
      width: 100%;
      &.selectedTab {
        background-color: #494949;
        width: 100%
      }
      .nav-link {
        color: #fff;
        font-weight: 600;
        padding: 0;
      }
    }
    .sidebar-menu {
      display: flex;
      flex-direction: column;
      height: 100%;
      justify-content: space-between;
      .dropdown {
        padding-bottom: 4rem;
        padding-left: 20px;
      }
    }
  }
  .project-details {
    // padding: 20px;
    .back-btn {
      padding: 8px 32px;
      background-color: $primary-color;
      color: #fff;
      border: none;
      font-weight: 600;
    }
    .title {
      font-weight: 700;
      font-size: 26px;
      margin: 30px 0px;
    }
    .project-col {
      margin-bottom: 10px;
      .card {
        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
        border: none;
        padding: 20px;
        height: 100%;
        .card-data {
          display: flex;
          &:last-child {
            .heading {
              margin-bottom: 0;
            }
            .data {
              margin-bottom: 0;
            }
          }
          .heading {
            width: 28%;
            font-weight: 600;
            @media (max-width: 1024px) {
              width: 40%;
            }
            @media (max-width: 820px) {
              width: 60%;
            }
            @media (max-width: 768px) {
              width: 60%;
            }
          }
          .data {
            width: 72%;
            @media (max-width: 1024px) {
              width: 60%;
            }
            @media (max-width: 820px) {
              width: 40%;
            }
            @media (max-width: 768px) {
              width: 40%;
            }
          }
        }
      }
    }
    .crew-info {
      display: flex;
      justify-content: space-between;
      align-items: center;
      .title {
        margin: 18px 0px;
      }
    }
    .crew-table {
      height: 266px;
      overflow-y: auto;
      &.all-crew-table {
        height: auto;
      }
      @media (max-height: 800px) {
        height: 172px;
      }
      .detail-btn {
        @media (max-width: 820px) {
          font-size: 14px;
          line-height: 1.4;
          padding: 0px 12px;
          height: 50px;
        }
      }
    }
  }
  .right-content {
    width: calc(100% - 240px);
    margin-right: 0;
    margin-left: auto;
    padding: 20px;
    &.login-content {
      width: 100%;
      display: flex;
      justify-content: center;
    }
    th {
      vertical-align: middle;
    }
    .table-heading {
      font-size: 17px;
      padding-left: 6px;
    }
    th,
    td {
      border-bottom-width: 0;
    }
    td {
      vertical-align: middle;
      height: 62px;
      .detail-btn {
        @extend .primary-btn;
      }
    }
    .details-td {
      display: flex;
      justify-content: flex-start;
      padding-right: 14px;
    }
    .crew-mgmt {
      .crew-mgmt-card {
        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
        padding: 30px 20px 32px 22px;
        border-radius: 8px;
        margin-bottom: 2.2rem;
        label {
          display: block;
          font-weight: 500;
          font-size: 16px;
          margin-bottom: 5px;
        }
        .dropdown {
          @media (max-width: 820px) {
            margin-bottom: 20px;
          }
          .dropdown-toggle {
            @extend .primary-btn;
            padding: 10px 18px;
            background-color: #2583d0;
          }
        }
        .form-select {
          padding: 9px;
          &:focus {
            border-color: $primary-color;
            box-shadow: unset;
          }
        }
      }
      .team-table {
        height: 100%;
        min-height: 300px;
        max-height: 506px;
        overflow-y: auto;
        margin-bottom: 1.1rem;
        @media (min-width: 1280px) and (max-height: 720px) {
          max-height: 330px;
        }
      }
      .crew-modal-table > tbody > .activeRow > * {
        background-color: #cee9ff;
      }
      .modal {
        .modal-dialog {
          height: calc(100% - 150px);
          .modal-body {
            height: 520px;
            overflow-y: auto;
            @media (min-width: 1024px) and (max-height: 600px) {
              height: 342px;
            }
          }
        }
      }
      .modal-title {
        font-weight: 700;
      }
    }
    .loader {
      background: rgba(0, 0, 0, 0.6);
      width: 100%;
      height: 100%;
      position: fixed;
      top: 0%;
      left: 0;
      .ddd {
        position: absolute;
        top: 36%;
        left: 50%;
        .spinner-border {
          width: 3rem;
          height: 3rem;
        }
      }
      
    }
    .no-data {
      position: absolute;
      left: 50%;
      top: 44%;
      p {
        font-size: 32px;
        font-weight: 600;
        color: #1a1a1a;
      }
    }
    .not-found {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      height: 86vh;
      .image {
        width: 450px;
        height: 450px;
        object-fit: cover;
      }
      .title {
        font-size: 28px;
        padding: 0px 34%;
        line-height: 1.5;
        text-align: center;
        font-weight: 600;
        @media (max-width: 1600px) {
          padding: 0px 27%;
        }
        @media (max-width: 820px) {
          padding: 0;
        }
      }
    }
  }
}
input {
  &:focus {
    box-shadow: unset;
    outline: none;
  }
}
.activeRow{
  background-color: yellow
}


@import "./auth.scss";
@import "./entry-modal.scss";

